# LibrePCB

./: CMakeLists.txt
apps/librepcb/: CMakeLists.txt
apps/librepcb-cli/: CMakeLists.txt
ci/: azure-jobs-macos.yml
libs/librepcb/common/: CMakeLists.txt
libs/librepcb/projecteditor/boardeditor/: boardeditor.cpp
tests/unittests/: CMakeLists.txt
tests/unittests/common/: systeminfotest.cpp
tests/unittests/common/fileio/: directorylocktest.cpp
